# simple-interner

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  Readme.md  bors.toml  release.toml
.github/workflows/: ci.yaml  publish.yml  release.yml
src/: interned.rs  interner.rs  lib.rs  parking_lot_shim.rs  std_lock_api.rs
