[package]
name = "simple-interner"
version = "0.3.1"
edition = "2021"

description = "A simple append-only interner"
repository = "https://github.com/CAD97/simple-interner"
keywords = ["symbol", "string", "interner", "intern", "cache"]
categories = ["caching", "parsing"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "passively-maintained" }

[features]
raw = ["hashbrown", "hashbrown/raw"]

[dependencies]
parking_lot = { version = "0.12.1", optional = true, default-features = false }
hashbrown = { version = "0.12.2", optional = true, default-features = false }

[dev-dependencies]
hash32 = "0.3.1"
