[package]
name = "simple-interner"
version = "0.3.4"
edition = "2021"
rust-version = "1.60.0"

description = "A simple append-only interner"
repository = "https://github.com/CAD97/simple-interner"
keywords = ["symbol", "string", "interner", "intern", "cache"]
categories = ["caching", "parsing"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["std"]
std = []
raw = ["hashbrown/raw"]

[dependencies]
hashbrown = { version = "0.13.2", default-features = false }
lock_api = { version = "0.4.9" }

[dev-dependencies]
hash32 = "0.3.1"
spin = { version = "0.9.4", default-features = false, features = ["lock_api", "rwlock"] }
